--- a/pom.xml
+++ b/pom.xml
@@ -77,14 +77,14 @@
       </dependency>
 
       <dependency>
-          <groupId>org.codehaus.groovy</groupId>
+          <groupId>org.apache.groovy</groupId>
           <artifactId>groovy-all</artifactId>
           <scope>provided</scope>
           <type>pom</type>
       </dependency>
 
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-sql</artifactId>
       </dependency>
 
